--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 60vh; /* Altezza statica */
 }
 
 /* Testo centrale */
@@ -40,28 +40,4 @@ body, html {
     font-family: 'ABCMaristVariable', Arial, sans-serif; /* Usa il font di default */
     font-size: 48px; /* Dimensione iniziale */
     text-align: center;
-}
-
-/* Controlli dello slider */
-#controls {
-    margin-top: 20px;
-}
-
-label {
-    display: block;
-}
-
-input[type=range] {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 4px;
-    background: black;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 16px;
-    height: 16px;
-    background: black;
-    border-radius: 50%;
 }
